# AzureContainerApps-DevOps-Demo

./: .dockerignore  .gitignore  .hadolintignore  Dockerfile  Project_planning.md  README.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: README.md  app-cd.yaml  app-ci.yaml  cd.yaml  ci.yaml  codeql.yml  terraform-cd.yaml  terraform-ci.yaml
app/: .env.example  README.md  config.py  main.py  models.py  telemetry.py
docs/: MONITORING.md  SECURITY_CHECKLIST.md  official_links.md
scripts/: README.md  azure-service-principal.ps1  azure-service-principal.sh  azure-terraform-backend.ps1  github-secrets-post-terraform.ps1  github-secrets-post-terraform.sh  github-secrets.ps1  github-secrets.sh  github-setup.ps1  github-setup.sh
terraform/: .gitignore  README.md
terraform/environments/dev/: main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
terraform/environments/prod/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
terraform/modules/aca-stack/: dashboard.tpl  main.tf  monitoring.tf  outputs.tf  variables.tf  versions.tf
tests/: conftest.py  test_integration.py  test_main.py
